Tools/BuildToolGUI/Resources/style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');

html { background-color:transparent }

body, html 
{
    width: 100%;
    height: 100%;
    margin: 0;
}

*
{
    font: 1em Source Sans Pro;
}

.page
{
    height:100%;
    -webkit-box-sizing: border-box;
    
    border-radius: 1em;
    border: .2em solid #0069c0;
    
    display: flex;
    flex-flow: column;
    
    background: #37474f;
    
    overflow: hidden;
}

.titlebar
{
    position: relative;

    background: #102027;
    height: 2em;
}

.titlebar button
{
    background-color: #2196f3;
    float: right;
    width: 2.5em;
    height: 100%;
    padding: 0px;
    border: 0px;
}

.titlebar p
{
    color: white;
    margin: 0px;

    font-size: 1.2em;

    position: absolute;
    top: 50%;
    left: .5em;
    transform: translate(0, -50%);
}

.header
{
    margin: .5em;
}

.header input
{
    width: 100%;
}

.header select
{
    width: 49%;
}

.header button
{
    width: 33%;
}


#commandOutput
{
    color: #ffffff;
    background-color: #62727b;
    
    flex: 1 1 auto;
    overflow-y: scroll;
    
    word-wrap: break-word;
    
    padding: 10px;
}

